<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".schedule.ImportChooseFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ib_close"
        style="@style/ButtonBackground"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:src="@drawable/ic_outline_close_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-16dp"
        android:gravity="center"
        android:text="@string/import_dialog_title"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:lineSpacingExtra="4dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/import_dialog_msg"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_school"
        style="@style/DialogButtonStyle"
        android:layout_marginTop="8dp"
        android:text="@string/import_dialog_from_eas" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_excel"
        style="@style/DialogButtonStyle"
        android:text="@string/import_dialog_from_excel" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_html"
        style="@style/DialogButtonStyle"
        android:text="@string/import_dialog_from_html" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_file"
        style="@style/DialogButtonStyle"
        android:text="@string/import_dialog_from_backup" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_share_import"
        style="@style/DialogButtonStyle"
        android:text="@string/import_dialog_from_share_code" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_feedback"
        style="@style/DialogButtonStyle"
        android:layout_marginBottom="8dp"
        android:text="@string/import_dialog_apply" />

</androidx.appcompat.widget.LinearLayoutCompat>