<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.suda.yzune.wakeupschedule.course_add.SelectWeekFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/add_course_title_select_week"
        android:textStyle="bold" />

    <com.suda.yzune.wakeupschedule.widget.SelectedRecyclerView
        android:id="@+id/rv_week"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="8dp"
        android:orientation="vertical" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="8dp"
        android:paddingEnd="8dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_all"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/all_weeks" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type1"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/odd" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_type2"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/even" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/DialogButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            style="@style/DialogButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/save"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>
