<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".schedule.DonateFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ib_close"
        style="@style/ButtonBackground"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:padding="8dp"
        android:src="@drawable/ic_outline_close_24" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="ヾ(=･ω･=)o"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="4dp"
        android:text="@string/donate_message"
        android:textSize="12sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_star"
        style="@style/DialogButtonStyle"
        android:layout_marginTop="8dp"
        android:text="@string/donate_feedback" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_weibo"
        style="@style/DialogButtonStyle"
        android:text="@string/donate_follow_weibo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_donate"
        style="@style/DialogButtonStyle"
        android:text="@string/donate_alipay" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/tv_donate_list"
        style="@style/DialogButtonStyle"
        android:layout_marginBottom="8dp"
        android:text="@string/donate_view_list" />

</androidx.appcompat.widget.LinearLayoutCompat>